--- a/nuspec/FRENDS.Community.Excel.ConvertExcelFile.nuspec
+++ b/nuspec/FRENDS.Community.Excel.ConvertExcelFile.nuspec
@@ -2,17 +2,21 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>FRENDS.Community.Excel.ConvertExcelFile</id>
-    <version>1.0.2.0</version>
+    <version>1.0.6.0</version>
     <title>FRENDS ConvertExcelFile task</title>
     <authors>HiQ Finland</authors>
     <owners />
-    <description>FRENDS task for converting Excel files to XML or CSV according to the task input parameters.</description>
+    <description>FRENDS task for converting Excel files to XML, CSV or JSON</description>
     <summary />
-    <dependencies />
+       <dependencies>
+            <dependency id="Frends.Tasks.Attributes" version="[1.2.0]" />
+            <dependency id="Newtonsoft.Json" version="6.0.8" />
+			<dependency id="ExcelDataReader" version="3.2.0"/>
+			<dependency id="ExcelDataReader.DataSet" version="3.2.0"/>
+		</dependencies>
     <frameworkAssemblies>
       <frameworkAssembly assemblyName="System" />
       <frameworkAssembly assemblyName="System.Text" />
-      <frameworkAssembly assemblyName="Excel" />
       <frameworkAssembly assemblyName="System.Data" />
       <frameworkAssembly assemblyName="System.IO" />
       <frameworkAssembly assemblyName="System.ComponentModel" />
@@ -23,8 +27,5 @@
   <files>
     <file src="..\FRENDS.Community.Excel.ConvertExcelFile\bin\release\FRENDS.Community.Excel.ConvertExcelFile.dll" target="lib\net45\FRENDS.Community.Excel.ConvertExcelFile.dll" />
     <file src="..\FRENDS.Community.Excel.ConvertExcelFile\bin\release\FRENDS.Community.Excel.ConvertExcelFile.XML" target="lib\net45\FRENDS.Community.Excel.ConvertExcelFile.XML" />
-    <file src="..\FRENDS.Community.Excel.ConvertExcelFile\lib\Frends.Tasks.Attributes.dll" target="lib\net45\Frends.Tasks.Attributes.dll" />
-	<file src="..\FRENDS.Community.Excel.ConvertExcelFile\lib\Excel.4.5.dll" target="lib\net45\Excel.4.5.dll" />
-	<file src="..\FRENDS.Community.Excel.ConvertExcelFile\lib\ICSharpCode.SharpZipLib.dll" target="lib\net45\ICSharpCode.SharpZipLib.dll" />
   </files>
 </package>
