--- a/nuspec/FRENDS.Community.Excel.ConvertExcelFile.nuspec
+++ b/nuspec/FRENDS.Community.Excel.ConvertExcelFile.nuspec
@@ -9,7 +9,7 @@
     <description>FRENDS task for converting Excel files to XML, CSV or JSON</description>
     <summary />
        <dependencies>
-            <dependency id="Frends.Tasks.Attributes" version="[1.2.1]" />
+            <dependency id="Frends.Tasks.Attributes" version="1.2.1" />
             <dependency id="Newtonsoft.Json" version="6.0.8" />
 			<dependency id="ExcelDataReader" version="3.2.0"/>
 			<dependency id="ExcelDataReader.DataSet" version="3.2.0"/>
