FCOM-129:  XML documentation did not work in FRENDS UI, because Input, Options etc classes were inside of the main class (ExcelClass) - Fixed version number - when code is going to master branch, first or second number should be raised (depending on the changes), and last number set to zero. - Moved all FRENDS property classes to Definitions.cs file to avoid too much clutter in the main class. It should only contain the main Task code. - Removed XML documentation from classes as there is no value showing 'Input class' in UI. Only properties and methods should contain XML documentation. - Renamed project and namespace to use Frends instead of FRENDS - as that is against our naming convention. - Added solution folder 'SolutionItems' that contain nuspec file and added FrendsTaskMetadata.json file for easy access while in VisualStudio.

--- a/nuspec/Frends.Community.Excel.ConvertExcelFile.nuspec
+++ b/nuspec/Frends.Community.Excel.ConvertExcelFile.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
-    <id>FRENDS.Community.Excel.ConvertExcelFile</id>
-    <version>1.0.20</version>
+    <id>Frends.Community.Excel.ConvertExcelFile</id>
+    <version>1.1.0</version>
     <title>FRENDS ConvertExcelFile task</title>
     <authors>HiQ Finland</authors>
     <owners />
@@ -25,7 +25,7 @@
     </frameworkAssemblies>
   </metadata>
   <files>
-    <file src="..\FRENDS.Community.Excel.ConvertExcelFile\bin\release\FRENDS.Community.Excel.ConvertExcelFile.dll" target="lib\net45\FRENDS.Community.Excel.ConvertExcelFile.dll" />
-    <file src="..\FRENDS.Community.Excel.ConvertExcelFile\bin\release\FRENDS.Community.Excel.ConvertExcelFile.XML" target="lib\net45\FRENDS.Community.Excel.ConvertExcelFile.XML" />
+    <file src="..\Frends.Community.Excel.ConvertExcelFile\bin\release\Frends.Community.Excel.ConvertExcelFile.dll" target="lib\net45\Frends.Community.Excel.ConvertExcelFile.dll" />
+    <file src="..\Frends.Community.Excel.ConvertExcelFile\bin\release\Frends.Community.Excel.ConvertExcelFile.XML" target="lib\net45\Frends.Community.Excel.ConvertExcelFile.XML" />
   </files>
 </package>
