--- a/Frends.Community.ConvertExcelFile/Frends.Community.ConvertExcelFile.csproj
+++ b/Frends.Community.ConvertExcelFile/Frends.Community.ConvertExcelFile.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{7BC1701A-1DC1-4303-882A-F08CB39BEC5E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Frends.Community.Excel.ConvertExcelFile</RootNamespace>
-    <AssemblyName>Frends.Community.Excel.ConvertExcelFile</AssemblyName>
+    <RootNamespace>Frends.Community.ConvertExcelFile</RootNamespace>
+    <AssemblyName>Frends.Community.ConvertExcelFile</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,7 +20,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Debug\Frends.Community.Excel.ConvertExcelFile.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\Frends.Community.ConvertExcelFile.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,7 +29,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Frends.Community.Excel.ConvertExcelFile.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Frends.Community.ConvertExcelFile.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
@@ -68,7 +68,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>bin\x86\Release\Frends.Community.Excel.ConvertExcelFile.xml</DocumentationFile>
+    <DocumentationFile>bin\x86\Release\Frends.Community.ConvertExcelFile.xml</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject>
