--- a/Frends.Community.ConvertExcelFileTests/Frends.Community.ConvertExcelFileTests.csproj
+++ b/Frends.Community.ConvertExcelFileTests/Frends.Community.ConvertExcelFileTests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{067456C0-086C-46A8-B37F-1405717B7BFC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>FRENDS.Community.Excel.ConvertExcelFileTests</RootNamespace>
-    <AssemblyName>FRENDS.Community.Excel.ConvertExcelFileTests</AssemblyName>
+    <RootNamespace>Frends.Community.ConvertExcelFileTests</RootNamespace>
+    <AssemblyName>Frends.Community.ConvertExcelFileTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
