--- a/.github/workflows/BuildAndTestOnEveryPush.yml
+++ b/.github/workflows/BuildAndTestOnEveryPush.yml
@@ -15,11 +15,12 @@ jobs:
 
     - name: Build
       run: dotnet build
-
-      if: runner.os == 'Windows' 
+    
+    - name: Test
+      run: dotnet test
+      
     - name: Pack release version of task
       run: dotnet pack --configuration Release --include-source
       
     - name: Push NuGet package to the testfeed
-      if: runner.os == 'Windows' 
       run: dotnet nuget push Frends.Community.ConvertExcelFile\bin\Release\Frends.Community.ConvertExcelFile.*.nupkg  --api-key ${{ secrets.COMMUNITY_FEED_API_KEY }} --source https://www.myget.org/F/frends-community-test/api/v2/package --symbol-source https://www.myget.org/F/frends-community-test/symbols/api/v2/package
