--- a/Frends.Community.ConvertExcelFile/Frends.Community.ConvertExcelFile.csproj
+++ b/Frends.Community.ConvertExcelFile/Frends.Community.ConvertExcelFile.csproj
@@ -10,7 +10,7 @@
 		<IncludeSource>true</IncludeSource>
 		<PackageTags>Frends</PackageTags>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
-		<Version>1.6.5</Version>
+		<Version>1.7.0</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -24,7 +24,8 @@
 		<PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
-		<PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+		<PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+		<PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
 	</ItemGroup>
 
 </Project>
