Added language version attribute

--- a/Frends.Community.ConvertExcelFile/Frends.Community.ConvertExcelFile.csproj
+++ b/Frends.Community.ConvertExcelFile/Frends.Community.ConvertExcelFile.csproj
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<TargetFrameworks>netstandard2.0;net471</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
 		<authors>HiQ Finland</authors>
 		<copyright>HiQ Finland</copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
