--- a/Frends.Community.ConvertExcelFile.Tests/Frends.Community.ConvertExcelFile.Tests.csproj
+++ b/Frends.Community.ConvertExcelFile.Tests/Frends.Community.ConvertExcelFile.Tests.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5</TargetFramework>
-
+    <TargetFramework>net471</TargetFramework>
+	  <LangVersion>latest</LangVersion>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
