--- a/.github/workflows/PackAndPushAfterMerge.yml
+++ b/.github/workflows/PackAndPushAfterMerge.yml
@@ -24,7 +24,7 @@ jobs:
       run: dotnet pack --configuration Release --include-source 
       
     - name: Push NuGet package to the (prod) feed
-      run: dotnet nuget push Frends.Community.ConvertExcelFile\bin\Release\Frends.Community.ConvertExcelFile.*.nupkg --api-key ${{ secrets.COMMUNITY_FEED_API_KEY }} --source https://www.myget.org/F/frends-community/api/v2/package --symbol-source https://www.myget.org/F/frends-community/symbols/api/v2/package
+      run: dotnet nuget push Frends.Community.ConvertExcelFile\bin\Release\Frends.Community.ConvertExcelFile.*.nupkg --api-key ${{ secrets.COMMUNITY_FEED_API_KEY }} --source https://www.myget.org/F/frends-community/api/v2/package
     
     - name: Create Release
       id: create_release
